<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".CreatedFamilyDietChart">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:id="@+id/toolbar"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="Family Diet Chart" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewCreate"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_marginRight="14dp"
            android:contentDescription="@drawable/family_diet_2"
            android:src="@drawable/family_diet_2" />

        <TextView
            android:id="@+id/TextAddFamilyDietChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textColor="#FFFFFFFF"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/createFamilyDietChart"

            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:background="#c8f4f3" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewDailyDietChartFeast"
                    android:layout_width="22dp"
                    android:layout_height="20dp"
                    android:contentDescription="@drawable/family_diet_2"
                    android:src="@drawable/family_diet_2" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:id="@+id/spinnerFamilyDietName" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewDailyDietChartMenu"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:contentDescription="@drawable/family_diet_2"
                    android:src="@drawable/family_diet_2" />

                <EditText
                    android:id="@+id/editFamilyDietDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/mFamilyDietDetails"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageViewDP"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:contentDescription="@drawable/date"
                    android:src="@drawable/date" />

                <EditText
                    android:id="@+id/editTextDP"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:calendarViewShown="true"
                    android:hint="@string/dateOfFamilyDiet"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageTimeDailyDietChart"
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:contentDescription="@drawable/time"
                    android:src="@drawable/time" />

                <EditText
                    android:id="@+id/etFamilyDietTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="2"
                    android:hint="@string/timeOfFamilyDiet"
                    android:inputType="time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/FamilyDiet_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/alarm"
                    android:text="@string/alarm"
                    android:textColor="#0052A3" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/rounded_blue"
                    android:drawableLeft="@drawable/save"
                    android:ems="5"
                    android:text="@string/Save"
                    android:textColor="@android:color/holo_blue_light" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>