<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="PHMS" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="14dp"
            android:contentDescription="@drawable/vaccination_1"
            android:src="@drawable/vaccination_1" />

        <TextView
            android:id="@+id/textMyVaccinationChartHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"

            android:gravity="center"
            android:padding="5dp"
            android:text="@string/myVaccinationChartHistory"

            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="viweAllData"
                android:text="@string/radioAll"
                android:textColor="#0052A3" />

            <RadioButton
                android:id="@+id/radioWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="viewWeeklyData"
                android:text="@string/radioWeek"
                android:textColor="#0052A3" />

            <!--<RadioButton-->
                <!--android:id="@+id/radioMonth"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:onClick="viewMonthlyData"-->
                <!--android:text="@string/radioMonth"-->
                <!--android:textColor="#0052A3" />-->
        </RadioGroup>

        <ListView
            android:id="@+id/lvVaccinationChartHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>